@@ -19,6 +19,8 @@ package org.apache.lucene.index;
 
 import java.io.IOException;
 
+import org.apache.lucene.index.PayloadProcessorProvider.DirPayloadProcessor;
+
 final class SegmentMergeInfo {
   Term term;
   int base;
@@ -28,7 +30,8 @@ final class SegmentMergeInfo {
   int delCount;
   private TermPositions postings;  // use getPositions()
   private int[] docMap;  // use getDocMap()
-
+  DirPayloadProcessor dirPayloadProcessor;
+  
   SegmentMergeInfo(int b, TermEnum te, IndexReader r)
     throws IOException {
     base = b;
